--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
+  "version": "1.1.0",
   "name": "next-server-action-hook",
-  "version": "1.0.2",
   "description": "A React hook for handling Next.js server actions on the client side with built-in loading and error states.",
-  "main": "index.ts",
   "author": "Danny Braunstein",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "prepublish": "tsc"
   },
   "dependencies": {
     "react": "^18.2.0"
-  }
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist/*"
+  ]
 }
