--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,12 @@
 {
-	"compilerOptions": {
-		"declaration": true,
-		"lib": [
-			"dom",
-			"dom.iterable",
-			"esnext"
-		],
-		"module": "esnext",
-		"moduleResolution": "node",
-		"outDir": "./dist",
-		"strictNullChecks": true,
-		"target": "es5"
-	},
-	"include": [
-		"src/*"
-	]
+  "compilerOptions": {
+    "declaration": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "strictNullChecks": true,
+    "target": "es5"
+  },
+  "include": ["src/*"]
 }
