--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.1",
+  "version": "1.1.2",
   "name": "next-server-action-hook",
   "description": "A React hook for handling Next.js server actions on the client side with built-in loading and error states.",
   "author": "Danny Braunstein",
@@ -13,6 +13,10 @@
   },
   "devDependencies": {
     "typescript": "^5.3.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dannyblv/next-server-action-hook.git"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
