--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "version": "1.2.2",
+  "version": "1.2.3",
   "name": "next-server-action-hook",
   "description": "A React hook for handling Next.js server actions on the client side with built-in loading and error states.",
   "author": "Danny Braunstein",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "prepublish": "tsc"
+    "test": "jest",
+    "build": "tsc"
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "@babel/preset-typescript": "^7.23.3",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.11",
+    "@types/testing-library__react-hooks": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-jest": "^29.1.2"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^5.3.3"
   },
   "repository": {
